# DOLSharp

./: .cvsignore  .gitignore  .travis.yml  AssemblyInfo.cs  BuffBot.cs  Clean.bat  Cleaner.cs  Dawn of Light.cmbx  Dawn of Light.ndoc  Dawn of Light.sln  Dummy.cs  EffectNPC.cs  Equipment.cs  GameClient.cs  GameServer.cs  GameServer.csproj  GameServerConfiguration.cs  GlobalConstants.cs  Help.bat  ItemModelNPC.cs  LootGeneratorDragonscales.cs  MissionMaster.cs  ProcNPC.cs  README.md  RewardNPC.cs  SharpDevelop.bat  StartupLocations.cs  Train.cs  Trainer.cs  UpgradeLog.XML  VS2002.bat  VS2003.bat  VS2005.bat  appveyor.yml  gplheader.txt  history.URL  history.txt  invalidnames.txt  nant.bat  nant.build  (+1 more)
Crafting/: AbstractCraftingSkill.cs  AbstractProfession.cs  AdvancedCraftingSkill.cs  Alchemy.cs  ArmorCrafting.cs  BasicCrafting.cs  ClothWorking.cs  CraftingMgr.cs  Fletching.cs  GemCutting.cs  HerbalCrafting.cs  Jewellery.cs  LeatherCrafting.cs  MetalWorking.cs  Repair.cs  Salvage.cs  SiegeCrafting.cs  SpellCrafting.cs  Tailoring.cs  WeaponCrafting.cs  WoodWorking.cs
DOLBase/: .cvsignore  .gitignore  AssemblyInfo.cs  BaseClient.cs  BaseServer.cs  BaseServerConfiguration.cs  ClientBase.cs  Constant.cs  Constants.cs  DOLBase.csproj  DOLBase.sln  IPacket.cs  Marshal.cs  PacketIn.cs  PacketOut.cs  Statistics.cs  WeakMulticastDelegate.cs  WeakRef.cs
DOLConfig/: .gitignore  AssemblyInfo.cs  DOLConfig.Designer.cs  DOLConfig.cs  DOLConfig.csproj  DOLConfig.resx  DOLConfigParser.cs  ExtraPropertiesEditor.cs  (+14 more)
Pathing/Detour/: CMakeLists.txt  README.md
Pathing/Detour/Include/: dol_detour.hpp
Pathing/Detour/Source/: DOLInterface.cpp
Pathing/Detour/Test/: main.cpp  zone078.nav
(+6596 files in other folders)
